<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <DUT Name="Axis_HMI_Struct" Id="{39e21a82-874d-43ad-b169-467d77d8fc4c}">
    <Declaration><![CDATA[TYPE Axis_HMI_Struct :
STRUCT
	(*-------- input----------------*)
	mode                     : UDINT;
	bStop_Man                : BOOL;
	bHalt_Man                : BOOL;
	bReset_Man               : BOOL;
	bJog_F                   : BOOL;
	bJog_B                   : BOOL;
	bAbsGo_Man               : BOOL;
	bAddGo_Man               : BOOL;
	bVelGo_Man               : BOOL;
	bRelGo_Man               : BOOL;
	bModGo_Man               : BOOL;
	fSetAbsPos_Man           : LREAL;
	fSetRelPos_Man           : LREAL;
	fSetModPos_Man           : LREAL;
	fSetVel_Man              : LREAL;
	softLimitPOS_FW          : LREAL;
	softLimitPOS_BW          : LREAL;
	bForwordEnable           : BOOL;
	bBackwordEnable          : BOOL;
	bFW_LimitSwith           : BOOL;
	bBW_LimitSwith           : BOOL;
	bDog_PointSwith          : BOOL;

	(*---------output-------------*)
	bPowerEn                 : BOOL;
	bBusy                    : BOOL;
	bDone                    : BOOL;
	bAborted                 : BOOL;
	bError                   : BOOL;
	nErrorID                 : UDINT;
	cErrorTXT                : STRING;
	
	Axis_ref                 : Axis_ref;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>