<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <POU Name="IOInstances_Axis" Id="{129868ca-206a-4383-ad79-d561c2e91fe6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM IOInstances_Axis
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[gAxisCtrl[1](
	HMI:= gAxisCtrl_HMI[1] , 
	Axis_CMD_Itf:= gDevice_ID[1]  , 
	Axis_ref:= gAxis[1] ,
	mode:= , 
	bStop_Man:= , 
	bStop_Auto:= , 
	bHalt_Man:= , 
	bReset_Man:= , 
	bReset_Auto:= , 
	bJog_F:= , 
	bJog_B:= , 
	bAbsGo_Man:= , 
	bAbsGo_Auto:= , 
	bVelGo_Man:= , 
	bVelGo_Auto:= , 
	bRelGo_Man:= , 
	bRelGo_Auto:= , 
	bModGo_Man:= , 
	bModGo_Auto:= , 
	bAddGo_Man:= , 
	fSetAbsPos_Man:= , 
	fSetAbsPos_Auto:= , 
	fSetRelPos_Man:= , 
	fSetRelPos_Auto:= , 
	fSetModPos_Man:= , 
	fSetModPos_Auto:= , 
	fSetVel_Man:= , 
	fSetVel_Auto:= , 
	softLimitPOS_FW:= , 
	softLimitPOS_BW:= , 
	bForwordEnable:= , 
	bBackwordEnable:= , 
	bFW_LimitSwith:= , 
	bBW_LimitSwith:= , 
	bDog_PointSwith:= , 
	bPowerEn=> , 
	bBusy=> , 
	bDone=> , 
	bAborted=> , 
	bError=> , 
	nErrorID=> , 
	cErrorTXT=> , 
	nStatus=>gDevice_ID[1].Statue.STATUE );]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>